--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
-name: flutter_package_template
+name: flutter_workbench
 description: A new Flutter package project.
 version: 0.0.1
-homepage: https://github.com/tmcmaster/flutter_package_template/blob/main/README.md
+homepage: https://github.com/tmcmaster/flutter_workbench/blob/main/README.md
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
