--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,18 @@ dependencies:
   flutter:
     sdk: flutter
 
+  flutter_riverpod:
+
+  widget_tester:
+    git:
+      url: https://github.com/tmcmaster/widget_tester.git
+  screen_tester:
+    git:
+      url: https://github.com/tmcmaster/screen_tester.git
+  theme_builder:
+    git:
+      url: https://github.com/tmcmaster/theme_builder.git
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
