--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,14 +17,17 @@ dependencies:
   flutter_riverpod:
 
   widget_tester:
-    git:
-      url: https://github.com/tmcmaster/widget_tester.git
+    path: ../widget_tester
+#    git:
+#      url: https://github.com/tmcmaster/widget_tester.git
   screen_tester:
-    git:
-      url: https://github.com/tmcmaster/screen_tester.git
+    path: ../screen_tester
+#    git:
+#      url: https://github.com/tmcmaster/screen_tester.git
   theme_builder:
-    git:
-      url: https://github.com/tmcmaster/theme_builder.git
+    path: ../theme_builder
+#    git:
+#      url: https://github.com/tmcmaster/theme_builder.git
 
 dev_dependencies:
   flutter_test:
