--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,12 +17,15 @@ dependencies:
   flutter_riverpod:
 
   widget_tester:
+#    path: ../widget_tester
     git:
       url: https://github.com/tmcmaster/widget_tester.git
   screen_tester:
+#    path: ../screen_tester
     git:
       url: https://github.com/tmcmaster/screen_tester.git
   theme_builder:
+#    path: ../theme_builder
     git:
       url: https://github.com/tmcmaster/theme_builder.git
 
