Made FlutterWorkbench export WidgetTester, ScreenTester and ThemeBuilder, and created tests.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,8 @@ environment:
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/images/
 
 dependencies:
   flutter:
@@ -17,17 +19,18 @@ dependencies:
   flutter_riverpod:
 
   widget_tester:
-#    path: ../widget_tester
-    git:
-      url: https://github.com/tmcmaster/widget_tester.git
+    path: ../widget_tester
+#    git:
+#      url: https://github.com/tmcmaster/widget_tester.git
   screen_tester:
-#    path: ../screen_tester
-    git:
-      url: https://github.com/tmcmaster/screen_tester.git
+    path: ../screen_tester
+#    git:
+#      url: https://github.com/tmcmaster/screen_tester.git
   theme_builder:
-#    path: ../theme_builder
-    git:
-      url: https://github.com/tmcmaster/theme_builder.git
+    path: ../theme_builder
+#    git:
+#      url: https://github.com/tmcmaster/theme_builder.git
+  faker: ^2.0.0
 
 dev_dependencies:
   flutter_test:
@@ -35,3 +38,6 @@ dev_dependencies:
   pedantic:
   lint:
   test:
+  uuid:
+  flutter_riverpod:
+  hooks_riverpod:
