--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,7 @@
 name: flutter_workbench
 description: A new Flutter package project.
 version: 0.0.1
+publish_to: 'none'
 homepage: https://github.com/tmcmaster/flutter_workbench/blob/main/README.md
 
 environment:
@@ -17,20 +18,35 @@ dependencies:
     sdk: flutter
 
   flutter_riverpod:
+  faker: ^2.0.0
+  screenshot:
 
   widget_tester:
     path: ../widget_tester
-#    git:
-#      url: https://github.com/tmcmaster/widget_tester.git
   screen_tester:
     path: ../screen_tester
-#    git:
-#      url: https://github.com/tmcmaster/screen_tester.git
+  prototype_widget:
+    path: ../prototype_widget
+  scaffold_widget:
+    path: ../scaffold_widget
   theme_builder:
     path: ../theme_builder
+
+#  widget_tester:
+#    git:
+#      url: https://github.com/tmcmaster/widget_tester.git
+#  screen_tester:
+#    git:
+#      url: https://github.com/tmcmaster/screen_tester.git
+#  prototype_widget:
+#    git:
+#      url: https://github.com/tmcmaster/prototype_widget.git
+#  scaffold_widget:
+#    git:
+#      url: https://github.com/tmcmaster/scaffold_widget.git
+#  theme_builder:
 #    git:
 #      url: https://github.com/tmcmaster/theme_builder.git
-  faker: ^2.0.0
 
 dev_dependencies:
   flutter_test:
