--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,31 +22,32 @@ dependencies:
   screenshot:
 
   widget_tester:
-    path: ../widget_tester
+    git:
+      url: httpss://github.com/tmcmaster/widget_tester.git
   screen_tester:
-    path: ../screen_tester
+    git:
+      url: https://github.com/tmcmaster/screen_tester.git
   prototype_widget:
-    path: ../prototype_widget
+    git:
+      url: https://github.com/tmcmaster/prototype_widget.git
   scaffold_widget:
-    path: ../scaffold_widget
+    git:
+      url: https://github.com/tmcmaster/scaffold_widget.git
   theme_builder:
-    path: ../theme_builder
+    git:
+      url: https://github.com/tmcmaster/theme_builder.git
 
-#  widget_tester:
-#    git:
-#      url: https://github.com/tmcmaster/widget_tester.git
-#  screen_tester:
-#    git:
-#      url: https://github.com/tmcmaster/screen_tester.git
-#  prototype_widget:
-#    git:
-#      url: https://github.com/tmcmaster/prototype_widget.git
-#  scaffold_widget:
-#    git:
-#      url: https://github.com/tmcmaster/scaffold_widget.git
-#  theme_builder:
-#    git:
-#      url: https://github.com/tmcmaster/theme_builder.git
+dependency_overrides:
+  widget_tester:
+    path: pkgs/widget_tester
+  screen_tester:
+    path: pkgs/screen_tester
+  prototype_widget:
+    path: pkgs/prototype_widget
+  scaffold_widget:
+    path: pkgs/scaffold_widget
+  theme_builder:
+    path: pkgs/theme_builder
 
 dev_dependencies:
   flutter_test:
