--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,7 @@ dependencies:
 
   widget_tester:
     git:
-      url: httpss://github.com/tmcmaster/widget_tester.git
+      url: https://github.com/tmcmaster/widget_tester.git
   screen_tester:
     git:
       url: https://github.com/tmcmaster/screen_tester.git
